New notes and code