@@ -1,2 +1,28 @@
 # Rest Assured, Serenity bdd framework
 
+#### Course files
+
+1. Run **rest.jar** from StudentApp
+
+   ```shell
+   java -jar rest.jar
+   # OR
+   java -jar rest.jar --server.port=8085
+   # for java 9
+   java -jar --add-modules java.xml.bind rest.jar
+   ```
+
+#### SERENITY BDD
+
+- open source test automation framework
+- integrated to work with many popular testing libraries like:JUNIT, SELENIUM2, APPIUM, JBEHAVE, CUCUMBER etc.
+- out of the box features for UI Automation (Web Driver Handling, Synchronization, Screenshots, Parallel testing, DataDriver testing, Cross browser testing, logging etc)
+- integrated with Rest-Assured to create API test automation without any hassle
+- integrates with popular build tools like MAVEN, GRADLE, ANT
+- reports
+- [project home page](http://www.thucydides.info/#/)
+- [user guide](http://www.thucydides.info/docs/serenity/)
+- [serenity on github](https://github.com/serenity-bdd/)
+- [serenity properties](http://www.thucydides.info/docs/serenity/#_serenity_system_properties_and_configuration)
+- [modeling requirements in junit](http://www.thucydides.info/docs/serenity/#_modelling_requirements_in_junit)
+
